--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,5 @@ include/Network.py merge=ours
 include/Sync.py merge=ours
 Clienttest.py merge=ours
 init.sh merge=ours
-sensor.py merge=ours
+# sensor.py merge=ours
 forwarder.py merge=ours
